	- Don't store/restore fields that are reference types.
	- Make sure Time Override gets disabled when the AI gets destroyed if auto-tuning was enabled (should prevent it from being active unintentionally during competitions).
	- Hide the 3-axis dynamic damping button when dynamic damping is disabled.
- Weapons:
	- Added (or corrected) penetration value for shaped charges to missile/gun/rocket part-menu infocards.
	- Missiles:
		- New 'canRelock' field (default: true), sets if SARH radar-guided missiles will re-lock onto the active radar target if the original radar lock is lost.
		- Further improvements to loft guidance, added a new field "terminalHomingType" which allows for selection of terminal homing logic.
			- "aam"/"aamlead", "aampure", "pronav" and "augpronav" are currently supported.
			- Both pronav options allow for user defined gains using "pronavGain" (recommended values of ~1-7).
			- IMPORTANT: "LoftTermRange" has been renamed to "terminalHomingRange"!
		- Fixed MultiMissileLauncher behavior with loft guidance, as well as pronav/augpronav.
		- Added new "aamhybrid" homingType, uses lead guidance until "terminalHomingRange" is reached, then it will switch to "terminalHomingType", with the same options as loft guidance.

v1.6.2.0
IMPROVEMENTS / FIXES
- General:
	- Fix TweakScale config for Typhoon engine (again).
	- Add Toggle/Enable/Disable pivot action groups to the Claw variants.
	- Add an action group option to give unlimited pivot range to the Claw variants.
	- Tweaks so that asteroids have the proper HP in flight mode.
	- Optimisation of some vector operations.
	- Adds variant texture for ground radars.
	- Fix SIDAM texture variants for standard brown or greyscale.
- Armor:
	- Make the adjustable armor 'clamped' and 'triangle type' options persistent and initialised correctly in the PAW.
- UI:
	- Adjust formatting of some debug telemetry.
	- Fix EMP Hellfire texture URL.
	- Add an indent for missile and CM settings.
- Vessel Mover: